--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "echarts": "^5.5.1",
+    "jquery": "^3.7.1",
     "primeicons": "^7.0.0",
     "primeng": "^16.2.0",
     "rxjs": "~7.8.0",
