--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angularx-qrcode": "^16.0.2",
     "echarts": "^5.5.1",
     "jquery": "^3.7.1",
     "primeicons": "^7.0.0",
@@ -32,6 +33,7 @@
     "@angular/cli": "^16.2.15",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/qrcode": "^1.5.5",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
